--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   },
   "devDependencies": {
     "@vuepress/bundler-webpack": "2.0.0-rc.24",
-    "vuepress": "2.0.0-rc.24",
-    "vuepress-theme-plume": "1.0.0-rc.164",
     "http-server": "^14.1.1",
+    "typescript": "^5.9.2",
     "vue": "^3.5.21",
-    "typescript": "^5.9.2"
+    "vuepress": "2.0.0-rc.24",
+    "vuepress-theme-plume": "1.0.0-rc.164"
+  },
+  "dependencies": {
+    "pdfjs-dist": "^5.4.149"
   }
 }
