--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "vuepress-theme-plume": "1.0.0-rc.164"
   },
   "dependencies": {
-    "pdfjs-dist": "^5.4.149"
+    "artplayer": "^5.3.0",
+    "chart.js": "^4.5.0",
+    "echarts": "^6.0.0",
+    "flowchart.ts": "^3.0.1",
+    "mermaid": "^11.12.0",
+    "pdfjs-dist": "^5.4.149",
+    "pyodide": "^0.28.3"
   }
 }
