--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   },
   "engines": {
     "node": "^20.6.0 || >=22.0.0"
+  },
+  "dependencies": {
+    "swiper": "^12.0.3",
+    "three": "^0.180.0"
   }
 }
