--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "node": "^20.6.0 || >=22.0.0"
   },
   "dependencies": {
-    "swiper": "^12.0.3",
-    "three": "^0.180.0"
+    "swiper": "^12.0.3"
   }
 }
