--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,61 @@
+# 依赖包目录
 **/node_modules
 
+# 构建输出目录
 docs/.vuepress/.cache
 docs/.vuepress/.temp
 docs/.vuepress/dist
+
+# 配置文件示例
 .example
 
+# 操作系统生成的文件
 .DS_Store
+Thumbs.db
+
+# 日志文件
 *.log
+
+# 环境变量文件
+.env*
+!.env.example
+
+# IDE 和编辑器文件
+.vscode/
+.idea/
+
+# 临时文件
+*.tmp
+*.temp
+
+# 包管理器锁文件
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# 调试和诊断文件
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+*.pnpm-debug.log*
+
+# 运行时数据
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# 测试覆盖率目录
+coverage/
+*.lcov
+.nyc_output/
+
+# 编辑器备份和交换文件
+*.bak
+*.swp
+*.swo
+*~
+
+# TypeScript 编译输出
+*.tsbuildinfo
