--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": "^20.6.0 || >=22.0.0"
   },
   "dependencies": {
+    "@waline/client": "^3.8.0",
     "chart.js": "^4.5.1",
     "echarts": "^6.0.0",
     "flowchart.ts": "^3.0.1",
