chore(deps): 更新依赖安装命令
- 移除 `--frozen-lockfile` 参数以允许锁文件更新
- 确保工作流在依赖安装阶段更具灵活性
- 保持与项目当前依赖管理策略一致

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
       # 安装依赖
       # Install dependencies
       - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
 
       # 运行构建脚本
