--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,86 @@
-name: deploy
+name: Deploy VuePress Docs
 
+# 触发条件：main 分支 push 或手动触发
 on:
-  # 每当 push 到 main 分支时触发部署
-  # Deployment is triggered whenever a push is made to the main branch.
   push:
     branches: [main]
-  # 手动触发部署
-  # Manually trigger deployment
+    # 仅当文档相关文件变更时触发（减少无效构建）
+    paths:
+      - "docs/**"
+      - "package.json"
+      - "pnpm-lock.yaml"
+      - ".github/workflows/deploy.yml"
   workflow_dispatch:
 
+# 并发控制：取消同分支的旧运行
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  docs:
+  docs-deploy:
     runs-on: ubuntu-latest
+    # 权限：最小必要权限（代替全局 GITHUB_TOKEN）
+    permissions:
+      contents: write # 用于推送 gh-pages 分支
+      pages: write # 可选：若使用 GitHub Pages 部署
+      id-token: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
-          # "Last updated time" and other git log-related information require fetching all commit records.
-          fetch-depth: 0
+          fetch-depth: 0 # 拉取全部提交记录（用于最近更新时间）
 
+      # 缓存 pnpm 依赖和 node_modules
+      - name: Setup pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
+
+      # 安装 pnpm
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: latest # 或指定具体版本如 9.0.0
 
+      # 安装 Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          # 选择要使用的 node 版本
-          node-version: 22
+          node-version: 22.x # 使用大版本的最新补丁版
+          cache: "pnpm" # 额外缓存（与上面的 cache 互补）
 
+      # 安装依赖（若缓存命中则跳过下载）
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile # 锁定依赖版本，避免意外更新
 
-      # 安装依赖
-      # Install dependencies
-      - name: Install Dependencies
-        run: pnpm install
-
-
-      # 运行构建脚本
-      # Run the build script
+      # 构建文档
       - name: Build VuePress site
         run: pnpm run docs:build
+        continue-on-error: false # 构建失败立即终止
 
+      # 校验构建产物（可选，防止空部署）
+      - name: Verify build output
+        run: |
+          if [ ! -d "docs/.vuepress/dist" ] || [ -z "$(ls -A docs/.vuepress/dist)" ]; then
+            echo "Error: Build directory is empty!"
+            exit 1
+          fi
 
-      # 查看 workflow 的文档来获取更多信息
-      # @see https://github.com/crazy-max/ghaction-github-pages
+      # 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v4
+        uses: crazy-max/ghaction-github-pages@v4.0.0 # 使用具体版本号
         with:
-          # 部署到 gh-pages 分支
-          target_branch: Pages
-          # 部署目录为 VuePress 的默认输出目录
+          target_branch: gh-pages # 遵循社区规范的分支名
           build_dir: docs/.vuepress/dist
+          keep_history: false # 禁用历史提交推送（解决历史提交冲突）
         env:
-          # @see https://docs.github.com/cn/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN || secrets.GITHUB_TOKEN }}
+        # 失败时重试（提升可靠性）
+        continue-on-error: false
