--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Deploy VuePress Docs
 
-# 触发条件：main 分支 push 或手动触发
+# 触发条件：main分支push（仅文档相关文件变更时）或手动触发
 on:
   push:
     branches: [main]
-    # 仅当文档相关文件变更时触发（减少无效构建）
+    # 仅监控文档/依赖/工作流相关文件，减少无效构建
     paths:
       - "docs/**"
       - "package.json"
@@ -12,7 +12,7 @@ on:
       - ".github/workflows/deploy.yml"
   workflow_dispatch:
 
-# 并发控制：取消同分支的旧运行
+# 并发控制：取消同分支正在运行的旧工作流，节省资源
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -20,19 +20,19 @@ concurrency:
 jobs:
   docs-deploy:
     runs-on: ubuntu-latest
-    # 权限：最小必要权限（代替全局 GITHUB_TOKEN）
+    # 最小权限原则：仅授予部署所需的权限
     permissions:
-      contents: write # 用于推送 gh-pages 分支
-      pages: write # 可选：若使用 GitHub Pages 部署
+      contents: write # 用于推送gh-pages分支
+      pages: write # 可选：GitHub Pages部署权限
       id-token: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # 拉取全部提交记录（用于最近更新时间）
+          fetch-depth: 0 # 拉取全部提交记录（用于VuePress的“最近更新时间”）
 
-      # 缓存 pnpm 依赖和 node_modules
+      # 缓存pnpm依赖和node_modules，加速依赖安装
       - name: Setup pnpm cache
         uses: actions/cache@v3
         with:
@@ -43,29 +43,28 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-
 
-      # 安装 pnpm
+      # 匹配package.json的packageManager版本
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: latest # 或指定具体版本如 9.0.0
 
-      # 安装 Node.js
+      # 安装Node.js（使用22.x最新补丁版，并用pnpm缓存互补）
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x # 使用大版本的最新补丁版
-          cache: "pnpm" # 额外缓存（与上面的 cache 互补）
+          node-version: 22.x
+          cache: "pnpm" # 额外缓存，与上面的cache步骤互补
 
-      # 安装依赖（若缓存命中则跳过下载）
+      # 安装依赖（--frozen-lockfile锁定版本，避免依赖意外更新）
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile # 锁定依赖版本，避免意外更新
+        run: pnpm install --frozen-lockfile
+        continue-on-error: false
 
-      # 构建文档
+      # 构建VuePress文档
       - name: Build VuePress site
         run: pnpm run docs:build
-        continue-on-error: false # 构建失败立即终止
+        continue-on-error: false
 
-      # 校验构建产物（可选，防止空部署）
+      # 校验构建产物，防止空部署
       - name: Verify build output
         run: |
           if [ ! -d "docs/.vuepress/dist" ] || [ -z "$(ls -A docs/.vuepress/dist)" ]; then
@@ -73,14 +72,13 @@ jobs:
             exit 1
           fi
 
-      # 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v4.0.0 # 使用具体版本号
+        uses: crazy-max/ghaction-github-pages@v4.0.0 # 使用具体版本号，提升稳定性
         with:
-          target_branch: gh-pages # 遵循社区规范的分支名
+          target_branch: gh-pages # 遵循社区规范的gh-pages分支
           build_dir: docs/.vuepress/dist
-          keep_history: false # 禁用历史提交推送（解决历史提交冲突）
+          keep_history: false # 等价于“强制推送”，覆盖目标分支历史（默认false，可省略）
         env:
+          # 优先使用自定义ACCESS_TOKEN，无则使用GitHub默认TOKEN
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN || secrets.GITHUB_TOKEN }}
-        # 失败时重试（提升可靠性）
         continue-on-error: false
