--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,53 +1,69 @@
-name: deploy
+# 工作流名称：在 GitHub Actions 列表中显示的名称
+name: 文档部署 / Deploy Docs
 
+# 触发条件：定义何时自动运行此工作流
 on:
-  # 每当 push 到 main 分支时触发部署
-  # Deployment is triggered whenever a push is made to the main branch.
+  # 当 push 到 main 分支时触发
   push:
-    branches: [main]
-  # 手动触发部署
-  # Manually trigger deployment
+    branches: [main] # 只针对 main 分支
+    # 路径过滤：只有以下文件修改时才触发，避免无意义构建
+    paths:
+      - "docs/**" # 文档内容、配置、主题等
+      - "package.json" # 依赖声明变更
+      - "pnpm-lock.yaml" # 锁文件变更
+
+  # 手动触发：允许在 GitHub 界面手动运行此工作流
   workflow_dispatch:
 
+# 并发控制：确保同一时间只有一个部署在运行，并自动取消旧的工作流
+concurrency:
+  group: pages # 并发组名称
+  cancel-in-progress: true # 新触发时自动取消正在运行的实例
+
+# 作业定义：负责构建并部署文档
 jobs:
   docs:
+    # Job 名称：在 Actions 页面显示的名称
+    name: 构建并部署文档 / Build & Deploy Docs
+    # 运行环境：使用最新的 Ubuntu 系统
     runs-on: ubuntu-latest
 
+    # 步骤列表：按顺序执行的操作
     steps:
-      - uses: actions/checkout@v4
+      # 步骤1：检出仓库代码
+      - name: 检出代码 / Checkout code
+        uses: actions/checkout@v4
         with:
-          # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
-          # "Last updated time" and other git log-related information require fetching all commit records.
+          # 拉取全部提交历史，以便 VuePress 生成最后更新时间等信息
           fetch-depth: 0
 
-      - name: Setup pnpm
+      # 步骤2：安装 pnpm 包管理器
+      - name: 安装 pnpm / Setup pnpm
         uses: pnpm/action-setup@v4
 
-      - name: Setup Node.js
+      # 步骤3：配置 Node.js 环境并启用缓存
+      - name: 配置 Node.js 环境 / Setup Node.js
         uses: actions/setup-node@v4
         with:
-          # 选择要使用的 node 版本
-          node-version: 22
+          node-version: 22 # 使用 Node.js 22
+          cache: pnpm # 启用 pnpm 缓存，显著加速安装
 
-      # 安装依赖
-      # Install dependencies
-      - name: Install Dependencies
-        run: pnpm install
+      # 步骤4：安装项目依赖
+      - name: 安装依赖 / Install Dependencies
+        run: pnpm install --frozen-lockfile
+        # 使用 --frozen-lockfile 确保依赖版本与锁文件严格一致
 
-      # 运行构建脚本
-      # Run the build script
-      - name: Build VuePress site
+      # 步骤5：构建 VuePress 文档站点
+      - name: 构建 VuePress 站点 / Build VuePress site
         run: pnpm run docs:build
+        # 执行 package.json 中定义的 docs:build 脚本
 
-      # 查看 workflow 的文档来获取更多信息
-      # @see https://github.com/crazy-max/ghaction-github-pages
-      - name: Deploy to GitHub Pages
+      # 步骤6：部署到 GitHub Pages
+      - name: 部署到 GitHub Pages / Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
         with:
-          # 部署到 gh-pages 分支
-          target_branch: Pages
-          # 部署目录为 VuePress 的默认输出目录
-          build_dir: docs/.vuepress/dist
+          target_branch: Pages # 部署目标分支（自定义为 Pages）
+          build_dir: docs/.vuepress/dist # VuePress 默认的构建输出目录
         env:
-          # @see https://docs.github.com/cn/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
+          # 使用仓库 Secrets 中的 ACCESS_TOKEN 进行认证
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
