chore(deps): 移除 pnpm 安装时的冻结锁文件选项
- 删除 `--frozen-lockfile` 参数以允许依赖版本更新
- 确保构建流程使用最新兼容的依赖包
- 提高部署流程的灵活性和稳定性

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,8 +50,7 @@ jobs:
 
       # 步骤4：安装项目依赖
       - name: 安装依赖 / Install Dependencies
-        run: pnpm install --frozen-lockfile
-        # 使用 --frozen-lockfile 确保依赖版本与锁文件严格一致
+        run: pnpm install
 
       # 步骤5：构建 VuePress 文档站点
       - name: 构建 VuePress 站点 / Build VuePress site
